--- a/src/app/components/admin/login/login.html
+++ b/src/app/components/admin/login/login.html
@@ -2,16 +2,16 @@
   class="bg-white dark:bg-gray-900 md:min-h-screen flex items-center justify-center p-4 transition-colors duration-300"
 >
   <div
-    class="w-full max-w-[950px] bg-white dark:bg-gray-800 [box-shadow:0_2px_10px_-3px_rgba(14,14,14,0.3)] dark:[box-shadow:0_2px_10px_-3px_rgba(0,0,0,0.4)] rounded-2xl overflow-hidden"
+    class="w-full max-w-237.5 bg-white dark:bg-gray-800 [box-shadow:0_2px_10px_-3px_rgba(14,14,14,0.3)] dark:[box-shadow:0_2px_10px_-3px_rgba(0,0,0,0.4)] rounded-2xl overflow-hidden"
   >
     <div class="flex items-center max-md:flex-col w-full gap-y-4">
       <!-- Image Section -->
-      <div class="md:max-w-[570px] w-full h-full">
+      <div class="md:max-w-142.5 w-full h-full">
         <div
           class="md:aspect-7/10 bg-gray-50 dark:bg-gray-700 relative before:absolute before:inset-0 before:bg-black/40 dark:before:bg-black/50 overflow-hidden w-full h-full"
         >
           <img
-            src="https://i.ibb.co.com/39hxyz76/2151521317.jpg"
+            src="images/loginImage.webp"
             class="w-full h-full object-cover dark:brightness-90"
             alt="login img"
           />
