--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -1,5 +1,8 @@
 <section>
   <app-carousel [slides]="carousels()" />
+  <div class="py-5 lg:py-10 bg-gray-300">
+    <p class="max-w-7xl mx-auto uppercase text-2xl lg:text-5xl text-indigo-700 text-center font-extrabold space-x-7">all kinds of medical equipments (new & used)<br class="hidden lg:inline-block"/> sales & service provider</p>
+  </div>
   <app-hero />
   <app-products-wrapper [products]="products()" />
 </section>
