--- a/src/app/components/shared/products-wrapper/products-wrapper.html
+++ b/src/app/components/shared/products-wrapper/products-wrapper.html
@@ -1,12 +1,11 @@
+<!-- Hero Section -->
+<app-page-title [about]="title() || 'All Products'" />
 <div>
-    <div class="py-4 mx-auto lg:max-w-6xl md:max-w-4xl max-w-xl">
-      <h2 class="text-2xl sm:text-3xl font-bold text-slate-800 text-center mb-10">Our Products</h2>
-      <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 sm:gap-6 gap-4">
-
-        @for (product of products(); track $index) {
-            <app-product-card [product]="product" />
-        }
-
-      </div>
+  <div class="py-4 mx-auto lg:max-w-6xl md:max-w-4xl max-w-xl">
+    <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 sm:gap-6 gap-4">
+      @for (product of products(); track $index) {
+      <app-product-card [product]="product" />
+      }
     </div>
+  </div>
 </div>
