--- a/src/app/components/admin/carousel-list/carousel-list.html
+++ b/src/app/components/admin/carousel-list/carousel-list.html
@@ -7,7 +7,7 @@
     </h1>
     <form
       (submit)="onSubmit($event)"
-      class="min-w-[400px] mx-auto px-2"
+      class="min-w-100 mx-auto px-2"
       enctype="multipart/form-data"
     >
       <!-- Title -->
