--- a/src/app/components/shared/footer/footer.html
+++ b/src/app/components/shared/footer/footer.html
@@ -1,22 +1,15 @@
-<footer class="bg-linear-to-r from-[#111] via-slate-900 to-[#111] pt-14 pb-6 px-4 md:px-12 tracking-wide">
+<footer class="bg-linear-to-r from-[#111] via-slate-900 to-[#111] pt-7 pb-6 px-4 md:px-12 tracking-wide">
   <div class="max-w-6xl mx-auto">
     <!-- Top Section -->
     <div class="max-w-2xl mx-auto text-center">
       <!-- Logo -->
-      <a routerLink="/" class="inline-block aspect-auto" aria-label="Home">
-        <img 
-          width="120" 
-          height="40" 
-          src="favicon.ico" 
-          alt="Company Logo" 
-          class="w-auto h-7 mx-auto" 
-          loading="lazy"
-        />
+      <a routerLink="/" class="inline-block text-2xl lg:text-5xl text-white font-extrabold" aria-label="Home">
+        {{companyName()}}
       </a>
       
       <!-- Social Links -->
       @if (hasSocialLinks()) {
-        <ul class="flex flex-wrap justify-center gap-6 mt-8">
+        <ul class="flex flex-wrap justify-center gap-6 mt-2 lg:mt-5">
           <!-- Facebook -->
           @if (contactInfo()?.facebookLink) {
             <li class="list-none">
@@ -99,7 +92,7 @@
     </div>
 
     <!-- Contact Info Grid -->
-    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8 mt-12 lg:mt-20">
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8 mt-2 lg:mt-5">
       <!-- Phone -->
       <div class="flex items-center">
         <div class="bg-gray-300 h-10 w-10 rounded-full flex items-center justify-center shrink-0" aria-hidden="true">
