--- a/src/app/components/shared/hero/hero.html
+++ b/src/app/components/shared/hero/hero.html
@@ -4,7 +4,7 @@
           <div class="relative z-10 max-lg:text-center">
             <h1 class="text-4xl sm:text-5xl md:text-6xl lg:text-7xl font-bold text-white leading-tight!">
               Welcome to
-              <span class="text-indigo-400 block"> X-Ray Machine</span>
+              <span class="text-indigo-400 block space-x-20"> {{companyName}}</span>
             </h1>
             <div class="max-w-md md:max-w-3xl mx-auto mt-6">
 
@@ -29,7 +29,7 @@
         </div>
         <div class="lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2 bg-black/90">
   <img class="h-56 w-full object-cover sm:h-72 md:h-96 lg:w-full lg:h-full opacity-50" 
-       src="images/hero.jpg" 
+       src="images/hero.webp" 
        alt="hero-img" />
 </div>
       </div>
