--- a/src/app/components/shared/whatsapp-btn/whatsapp-btn.html
+++ b/src/app/components/shared/whatsapp-btn/whatsapp-btn.html
@@ -1,4 +1,4 @@
-<div class="floating_btn">
+<div class="floating_btn z-40">
   <a target="_blank" [href]="whatsappLink" aria-label="Contact us on WhatsApp">
     <div class="contact_icon">
       <fa-icon [icon]="faWhatsapp" class="my-float"></fa-icon>
