--- a/src/app/components/shared/carousel/carousel.html
+++ b/src/app/components/shared/carousel/carousel.html
@@ -1,42 +1,47 @@
-@if (slides() && slides().length > 0) {
-<div ngSkipHydration>
+@if (slides().length > 0) {
+<div class="relative w-full h-[50vh] md:h-[90vh]">
+  @if (isBrowser) {
   <swiper-container
-    [loop]="canLoop() ? 'true' : 'false'"
-    slide-per-view="4"
+    [attr.loop]="isLoopEnabled() ? 'true' : null"
+  [attr.autoplay]="isInteractive() ? 'true' : null"
+  [attr.navigation]="isInteractive() ? 'true' : null"
+  [attr.pagination]="isInteractive() ? 'true' : null"
+    slides-per-view="1"
     effect="fade"
-    pagination="true"
-    navigation="true"
-    autoplay="true"
-    loop="true"
     speed="1500"
-    interval="2000"
-    class="w-full h-[50vh] md:h-[90vh]"
+    class="w-full h-full"
   >
-    @for (item of slides(); track item?.id; let i = $index) {
+    @for (item of computedSlides(); track $index; let i = $index) {
     <swiper-slide>
       <div class="relative w-full h-full">
         <img
           [ngSrc]="item.imageUrl"
           fill
-          [ngSrcset]="'640w, 1024w, 1920w'"
+          [ngSrcset]="'360w, 480w, 640w, 1024w, 1920w'"
           sizes="100vw"
           [priority]="i === 0"
-          [alt]="item.title || 'Carousel Image '+ $index"
+          [alt]="item.title || 'Slide ' + i"
           class="w-full h-full object-cover"
         />
-
-        @if (item?.title) {
-        <div
-          class="absolute bottom-10 left-10 px-4 py-2.5 bg-black/50 rounded text-white max-w-[50%] z-10"
-        >
-          <h2 class="text-sm md:text-xl font-bold">{{ item?.title }}</h2>
-          <p class="text-xs md:text-sm">{{ item?.description }}</p>
+        @if (item.title) {
+        <div class="absolute bottom-10 left-10 px-4 py-2.5 bg-black/50 rounded text-white max-w-[50%] z-10">
+          <h2 class="text-sm md:text-xl font-bold">{{ item.title }}</h2>
+          <p class="text-xs md:text-sm">{{ item.description }}</p>
         </div>
         }
       </div>
     </swiper-slide>
     }
   </swiper-container>
+  } @else {
+    <img 
+      [ngSrc]="slides()[0].imageUrl" 
+      fill 
+      priority 
+      class="w-full h-full object-cover" 
+      alt="Banner Placeholder" 
+    />
+  }
 </div>
 } @else {
 <div class="flex items-center justify-center h-[50vh]">
