--- a/src/app/components/admin/about-update/about-update.html
+++ b/src/app/components/admin/about-update/about-update.html
@@ -412,7 +412,7 @@
         (change)="onFileSelect($event)"
         class="cursor-pointer bg-neutral-secondary-medium border border-default-medium text-heading text-sm rounded-base focus:ring-brand focus:border-brand block w-full shadow-xs placeholder:text-body"
       />
-      <p class="mt-1 text-sm text-gray-500" id="file_input_help">SVG, PNG, JPG or WEBP.</p>
+  <p class="mt-1 text-sm text-gray-500" id="file_input_help">SVG, PNG, JPG or WEBP (MAX. 1280x720px).</p>
 
       <!-- Image Preview -->
       @if (previewUrl()) {
