--- a/src/app/components/admin/carousel-list/carousel-list.html
+++ b/src/app/components/admin/carousel-list/carousel-list.html
@@ -63,6 +63,7 @@
           (change)="onFileSelect($event)"
           class="cursor-pointer bg-neutral-secondary-medium border border-default-medium text-heading text-sm rounded-base focus:ring-brand focus:border-brand block w-full shadow-xs placeholder:text-body"
         />
+  <p class="mt-1 text-sm text-gray-500" id="file_input_help">SVG, PNG, JPG or WEBP (MAX. 1280x720px).</p>
       </div>
 
       <!-- Error Message -->
@@ -203,7 +204,7 @@
                   sizes="64px"
                   alt="Carousel Image"
                   class="object-cover rounded"
-                  [priority]="$index < 3"
+                  [priority]="$index < 2"
                 />
               </div>
             </th>
